5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1764_1185.log
== TEST (2019-05-30 01:07:46) 
-- CODE:
from numpy import * 

nivel=array(eval(input("glicose no sangue:")))
i=0
x=0

while(i<size(nivel)):
	if(i>99):
		x=x+1
	i=i+1
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:09:59) 
-- CODE:
from numpy import * 

nivel=array(eval(input("glicose no sangue:")))
i=0
x=0

while(i<size(nivel) and nivel[i]>99):
		
	i=i+1
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:10:27) 
-- CODE:
from numpy import * 

nivel=array(eval(input("glicose no sangue:")))
i=0
x=0

while(i<size(nivel) and (nivel[i]>99):
		
	i=i+1
print(i)
	
-- ERROR:
File "XXXX", line 7
    while(i<size(nivel) and (nivel[i]>99):
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:10:39) 
-- CODE:
from numpy import * 

nivel=array(eval(input("glicose no sangue:")))
i=0
x=0

while((i<size(nivel) and (nivel[i]>99)):
		
	i=i+1
print(i)
	
-- ERROR:
File "XXXX", line 7
    while((i<size(nivel) and (nivel[i]>99)):
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:10:58) 
-- CODE:
from numpy import * 

nivel=array(eval(input("glicose no sangue:")))
i=0
x=0

while(((i<size(nivel)) and (nivel[i]>99)):
		
	i=i+1
print(i)
	
-- ERROR:
File "XXXX", line 7
    while(((i<size(nivel)) and (nivel[i]>99)):
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:11:05) 
-- CODE:
from numpy import * 

nivel=array(eval(input("glicose no sangue:")))
i=0
x=0

while((i<size(nivel)) and (nivel[i]>99)):
		
	i=i+1
print(i)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
